# mkdocs-git-latest-changes-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml  ghpages.yml  python-publish.yml  tests.yml
docs/: index.md  test.md
docs/subdir/: index.md
mkdocs_git_latest_changes_plugin/: plugin.py
src/mkdocs_git_latest_changes_plugin/: git_adapter.py  helpers.py  models.py  plugin.py  presentation.py
src/mkdocs_git_latest_changes_plugin/templates/: recent_changes_table.md.j2
subdir/: index.html
test/: index.html
tests/: test_mkdocs_git_latest_changes_plugin.py  test_plugin.py
